--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <ul class="list pa0">
   {% for post in site.posts %}
   <li class="mv2">
-    <a href="{{ site.url }}{{ post.url }}" class="db pv1 link blue hover-mid-gray">
+    <a href="{{ site.url }}{{ post.url }}" class="db pv1 link hover-mid-gray">
       <time class="fr silver ttu">{{ post.date | date: "%F" }} </time>
       {{ post.title }}
     </a>
